# My-cookiecutter_template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
