[project]
name = "{{ cookiecutter.project_name|lower|replace(' ', '-') }}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "{{cookiecutter.author}}" }]
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
